syntax = "proto3";

package mtadata.v1;

import "enums.proto";
import "types.proto";

enum QueryOrderBy {
  DEFAULT = 0;
  GTFS_STOP_ID = 1;
  STATION_ID = 2;
  COMPLEX_ID = 3;
}

message StationRequest {
  string station_id = 1;
  string gtfs_stop_id = 2;
}

message BaseQueryParams {
  optional Route route = 1;
  optional Borough borough = 2;
  optional Division division = 3;
  optional QueryOrderBy order_by = 4;
  optional int32 limit = 5;
}

message StationsQueryParams {
  optional BaseQueryParams base_params = 1;
  optional string station_id = 2;
  optional string complex_id = 3;
  optional string gtfs_stop_id = 4;
}

message StationsQuery {
  StationsQueryParams query_params = 1;
}

message StationComplexRequest {
  string complex_id = 1;
  bool verbose = 2;
}

message StationComplexesQueryParams {
  optional BaseQueryParams base_params = 1;
  optional string complex_id = 2;
}

message StationComplexesQuery {
  StationComplexesQueryParams query_params = 1;
  bool verbose = 2;
}

message StationsResult {
  repeated Station stations = 1;
}

message StationComplexesResult {
  repeated StationComplex station_complexes = 1;
}

message AllRoutes {
  repeated Route routes = 1;
}

message AllBoroughs {
  repeated Borough boroughs = 1;
}

message AllDivisions {
  repeated Division divisions = 1;
}

message AllStructures {
  repeated Structure structures = 1;
}